...
    android:layout_height="match_parent"
    android:background="@drawable/rounded_card"
    app:layout_constrainedHeight="true"
    app:layout_constraintCircleRadius="12dp">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_card"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
...
            android:background="@drawable/rounded_card"
            android:text="Requests" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/tab_view_pager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
