<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".request_list.NewRequestForm">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/skyteal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/create_request_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="Create Request Post"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/request_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/inter"
                android:text="Item Name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/request_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/full_rounded_card"
                android:ems="10"
                android:hint="Broccoli"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingLeft="5dp" />

            <TextView
                android:id="@+id/create_request_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/inter"
                android:text="Item Quantity (kg)"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/quantity_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/full_rounded_card"
                android:ems="10"
                android:hint=".5"
                android:inputType="number"
                android:minHeight="48dp"
                android:paddingLeft="5dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/inter"
                android:text="Additional Requests / Info"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/full_rounded_card"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:paddingLeft="5dp" />

            <TextView
                android:id="@+id/select_tags_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/inter"
                android:text="Select Tags"
                android:textSize="18sp" />

            <include
                android:id="@+id/include_tags_req"
                layout="@layout/fragment_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/create_request_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Create Post" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>