...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skyteal"
    tools:context=".EditRestrictionsActivity">

    <EditText
        android:id="@+id/restriction_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/full_rounded_card"
        android:ems="10"
        android:hint="Restriction"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="5dp"
        app:layout_constraintBottom_toTopOf="@+id/add_dietary_restriction_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_dietary_restriction_button"
...
