...
                android:layout_weight="1"
                android:text="@string/dietary_restrictions_text"
                android:textAlignment="center"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/add_restriction_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:src="@drawable/add"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

        <ListView
            android:id="@+id/dietary_restrictions_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="DuplicateSpeakableTextCheck">

        </ListView>

...
